# nn_rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  loss_fn.rs  main.rs  optimizer.rs  tensor.rs
src/nn/: dense.rs  layer.rs  mod.rs  operation.rs  optimizer.rs  parameter.rs
src/optimizer/: mod.rs  sgd.rs
src/task/: classification.rs  mod.rs
src/tensor/: autodiff.rs  mod.rs  node.rs  operation.rs  utils.rs  value.rs
src/tensor/ops/: add.rs  broadcast.rs  div.rs  log.rs  matmul.rs  mean.rs  mod.rs  multiply.rs  pow.rs  relu.rs  sigmoid.rs  softmax.rs  squeeze.rs  sub.rs  sum.rs  t.rs  tanh.rs  unsqueeze.rs
