[package]
name = "nn_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
average = "0.16.0"
log = "0.4.27"
ndarray = "0.16.1"
rand = "0.9.0"
rayon = "1.10.0"

[lib]
name = "nn_rust"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.24.1"
features = ["extension-module"]
